Mon May 13 10:41:41 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* install-sh (transformbasename): Correct misspelling of
	transformbasename.  From Ian Lance Taylor.

Sat Apr 27 11:39:10 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (handle_configure): Set mkinstalldirs variable
	here.
	(handle_dist_worker): Explicitly set distdir in subdir makes.
	(handle_dist): Handle separate distdir target.
	(handle_dist_worker): Only generate distdir target.

	* texinfos.am (install-info): Use $(mkinstalldirs).
	* scripts.am (install-@DIR@SCRIPTS): Use $(mkinstalldirs).
	* programs.am (install-@DIR@PROGRAMS): Use $(mkinstalldirs).
	* libraries.am (install-@DIR@LIBRARIES): Use $(mkinstalldirs).
	* header.am (install-@DIR@HEADERS): Use $(mkinstalldirs).
	* data.am (install-@DIR@DATA): Use $(mkinstalldirs).

	* automake.in (read_am_file): Set mkinstalldirs variable.
	(handle_man_pages): Use it.
	(handle_installdirs): Ditto.

Fri Apr 26 15:10:48 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (handle_man_pages): Fix mkinstalldirs invocation.

Thu Apr 25 18:40:06 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (handle_dist_worker): Use $(TAR), not tar.
	(handle_merge_targets): Make sure config header is built before
	recursing into subdirs.
	(handle_libraries): Generate LIBFILES for check_LIBRARIES.
	(handle_merge_targets): Handle case where nothing is installed but
	something must be built -- "make install" must still work.

	* dist-vars.am (TAR): New macro.

	* automake.in (scan_configure): Support AC_REPLACE_GNU_GETOPT.
	(handle_configure): Require stamp-h.in when config header used.

Tue Apr 23 17:57:13 1996  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>

	* doc/mdate-sh: Extract the last field from the date output, not
 	the sixth, which will fail when the timezone name has more than
 	one word or is missing.

Wed Apr 24 20:29:26 1996  Tom Tromey  <tromey@creche.cygnus.com>
