@@ -2644,8 +2644,6 @@ sub am_install_var
 	    }
 	}
     }
-    # We never want to examine EXTRA_blah.
-    delete $valid{'EXTRA'};
 
     local ($clean_file) = $file . '-clean';
     local ($one_name);
@@ -2664,6 +2662,10 @@ sub am_install_var
 		next if $rcurs =~ /^\@.*\@$/;
 		push (@result, $rcurs);
 	    }
+
+	    # "EXTRA" shouldn't be used when generating clean targets,
+	    # @all, or install targets.
+	    next if $X eq 'EXTRA';
 
 	    if ($do_clean)
 	    {
@@ -2685,8 +2687,7 @@ sub am_install_var
 	    }
 	    if ($X eq 'noinst' || $X eq 'check')
 	    {
-		# Objects in noinst_FOO or check_FOO never get
-		# installed.
+		# Objects which don't get installed by default.
 		next;
 	    }
 
