@@ -1,3 +1,7 @@
+Tue May 14 10:17:17 1996  Tom Tromey  <tromey@creche.cygnus.com>
+
+	* extra.test: Reversed sense of test.
+
 Fri Apr 26 15:15:01 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
 	* instman.test: New file.
