@@ -1,3 +1,8 @@
+Tue May 14 10:24:30 1996  Tom Tromey  <tromey@creche.cygnus.com>
+
+	* automake.in (am_install_var): Fixed problem in EXTRA_ handling.
+	Test extra.test.
+
 Mon May 13 10:41:41 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
 	* install-sh (transformbasename): Correct misspelling of
